# L3AC

./: README.md  example.py  pyproject.toml  runtime.env  runtime_gpu.env
l3ac/: __about__.py  __init__.py  codec.py  layers.py  modules.py
l3ac/configs/: 0k75bps.toml  1k5bps.toml  1kbps.toml  3kbps.toml
l3ac/tconv/: __init__.py  base.py
l3ac/vq/: __init__.py  fsq.py
l3ac/xtract/: config.py
l3ac/xtract/nn/: __init__.py  layers.py  module.py  utils.py
src/: main.py  runtime_resolver.py
src/l3ac/: __init__.py  codec.py  en_codec.py  layers.py  local_trans.py  modules.py
src/l3ac/configs/: debug.toml
src/l3ac/vq/: fsq_act.py
src/model/: optimizer.py
src/model/data/: __init__.py  format.py
src/model/exp/: __init__.py  acc_runtime.py  eval.py  mlogging.py  tracker.py  train.py
src/model/loss/: __init__.py  audio.py  base.py
src/model/metric/: __init__.py  audio.py  base.py  classify.py  vq.py
src/model/network/: __init__.py
src/prepare/data_process/: __init__.py  common_voice.py  fsd50k.py  libri_speech.py  mtg.py
src/scripts/: __init__.py
src/scripts/plot/: __init__.py  bubble_chart.py  trend_pool.py
src/scripts/temp/: audio_sig_dis.py  cal_bps.py
src/tools/audio/: base.py  extend.py  file.py
src/tools/loss/: __init__.py  asr.py  multi_label.py  weight.py
src/utils/: __init__.py  args.py  context.py  file.py  iter.py  log.py  module.py  number.py  output.py  plot.py
src/utils/data/: __init__.py  reduce_dim.py  welford.py
src/utils/struct/: tree.py
src/xtract/: __init__.py  ddp.py  gpu.py  tensor_log.py
(+16 files in other folders)
